demos/daemonsets/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: daemonsets
  labels:
    app: daemonsets
spec:
  selector:
    app: daemonsets
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
